# ces-social-robot

human_detector_laser/: .cproject  .project  CMakeLists.txt  package.xml
human_detector_laser/include/: silbot_parking.h  tool_class.h
human_detector_laser/src/: silbot_parking.cpp  tool_class.cpp
social_arm/social_robot_arm_gui/arm/: default_name.yaml  left_ment1.yaml  left_ment1_1.yaml  left_ment1_2.yaml  left_ment_4.yaml  left_ment_6.yaml  left_ment_7.yaml  ment_3.yaml  right_ment1_1.yaml  right_ment1_2.yaml  right_ment2_1.yaml  right_ment2_2.yaml  right_ment_4.yaml  right_ment_6.yaml  right_ment_7.yaml
social_arm/social_robot_arm_gui/head_waist/: hw_pos.yaml
social_avatar_java/: .classpath  .project  CMakeLists.txt  package.xml
social_avatar_java/scripts/: test_client
social_avatar_java/src/com/robocare/social/: SocialAvatar.java
social_avatar_java/src/com/robocare/social/room/: SocialAvatarRoom.java
social_avatar_java/src/com/robocare/social/test/: SocialAvatarTestClient.java
social_avatar_java/src/com/robocare/social/util/: SocialAvatarUtility.java
social_avatar_java/system/config/: config.xml
social_avatar_java/system/data/shell/: load_avatar  move_avatar
social_bringup/: CMakeLists.txt  package.xml
social_bringup/launch/: core.launch  exhibition.launch
social_bringup/res/: exhibition.yaml
social_bringup/scripts/: exhibition.py
social_motion/robocare_msgs/: CMakeLists.txt
social_motion/social_avatar/scripts/: avatar_test
social_motion/social_motion_maker/src/social_motion_maker/: social_motion_maker.py
social_motion/social_motion_player/launch/: motion.launch
social_motion/social_motion_res/avatar/: ment_3.json  right_ment_2.json
social_motion/social_motion_res/joint/: head_up3_1000.joint  head_up_1000.joint  head_up_1500.joint  head_up_500.joint  left_ment_4.joint  left_ment_6.joint  ment_3.joint  ment_5.joint  right_ment1_1.joint  right_ment_1.joint  right_ment_2.joint  right_ment_3.joint  right_ment_4.joint  right_ment_5.joint  right_ment_6.joint
social_motion/social_motion_res/led/: left_ment_6.json  ment_3.json  ment_5.json  right_ment_1.json  right_ment_2.json  right_ment_4.json  right_ment_5.json
social_motion/social_motion_res/motion/: head_up3_1000.json  head_up_1000.json  head_up_1500.json  head_up_500.json  left_ment_4.json  left_ment_6.json  ment_3.json  ment_5.json  right_ment_1.json  right_ment_2.json  right_ment_3.json  right_ment_4.json  right_ment_5.json  right_ment_6.json  test.json
social_startup/: CMakeLists.txt  package.xml
social_startup/include/: social_bringup.h
social_startup/launch/: social_startup.launch
social_startup/src/: social_bringup.cpp
social_tele_keyboard/: CMakeLists.txt  README.md  package.xml  setup.py
social_tele_keyboard/nodes/: social_tele_keyboard
social_tele_keyboard/src/social_tele_keyboard/: __init__.py  social_tele_keyboard.py
