<?xml version="1.0"?>
<package>
  <name>social_tele_keyboard</name>
  <version>0.0.0</version>
  <description>The social_tele_keyboard package</description>

  <maintainer email="skkang@robocare.co.kr">skkang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


  <export>

  </export>
</package>
